[gd_scene load_steps=16 format=3 uid="uid://cqnb17c1naiw"]

[ext_resource type="Script" path="res://export_window/export_preview.gd" id="1_dng38"]
[ext_resource type="Script" path="res://export_window/camera.gd" id="1_jrekc"]
[ext_resource type="Script" path="res://export_window/grid.gd" id="1_qj44q"]
[ext_resource type="Texture2D" uid="uid://dj5crsnlf763o" path="res://export_window/CenterView.svg" id="2_vef8v"]
[ext_resource type="Theme" uid="uid://c1swtnev81xu" path="res://export_window/export_preview_ui_theme.tres" id="2_yhmk3"]
[ext_resource type="Script" path="res://export_window/background.gd" id="3_0hgyv"]
[ext_resource type="Texture2D" uid="uid://8k6f6wta4184" path="res://export_window/ZoomMore.svg" id="3_g68fs"]
[ext_resource type="Texture2D" uid="uid://bwq1qvonclya6" path="res://export_window/ZoomLess.svg" id="4_vjt06"]

[sub_resource type="Shortcut" id="Shortcut_paa3w"]

[sub_resource type="InputEventKey" id="InputEventKey_1v2ok"]
device = -1
ctrl_pressed = true
keycode = 45

[sub_resource type="Shortcut" id="Shortcut_ndax0"]
events = [SubResource("InputEventKey_1v2ok")]

[sub_resource type="InputEventKey" id="InputEventKey_tcx35"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_chibd"]
events = [SubResource("InputEventKey_tcx35")]

[sub_resource type="InputEventKey" id="InputEventKey_ve1ct"]
device = -1
ctrl_pressed = true
keycode = 61

[sub_resource type="Shortcut" id="Shortcut_u8mum"]
events = [SubResource("InputEventKey_ve1ct")]

[node name="ExportPreview" type="Node2D"]
texture_filter = 1
script = ExtResource("1_dng38")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UILayer"]
offset_right = 61.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("2_yhmk3")

[node name="CenterView" type="Button" parent="UILayer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Center View"
focus_mode = 0
shortcut = SubResource("Shortcut_paa3w")
icon = ExtResource("2_vef8v")
flat = true

[node name="ZoomOut" type="Button" parent="UILayer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Zoom Out (Ctrl+Minus)"
focus_mode = 0
shortcut = SubResource("Shortcut_ndax0")
shortcut_feedback = false
shortcut_in_tooltip = false
icon = ExtResource("4_vjt06")
flat = true

[node name="ResetZoom" type="Button" parent="UILayer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
tooltip_text = "Zoom to 100% (1)"
focus_mode = 0
shortcut = SubResource("Shortcut_chibd")
shortcut_in_tooltip = false
text = "100 %"
flat = true

[node name="ZoomIn" type="Button" parent="UILayer/MarginContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Zoom In (Ctrl+Equal)"
focus_mode = 0
shortcut = SubResource("Shortcut_u8mum")
shortcut_feedback = false
shortcut_in_tooltip = false
icon = ExtResource("3_g68fs")
flat = true

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("1_jrekc")

[node name="Background" type="ColorRect" parent="Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_0hgyv")

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("1_qj44q")
grid_size = Vector2(20, 20)

[node name="SpriteArea" type="Node2D" parent="."]

[connection signal="pressed" from="UILayer/MarginContainer/HBoxContainer/CenterView" to="Camera" method="_on_center_view_pressed"]
[connection signal="pressed" from="UILayer/MarginContainer/HBoxContainer/ZoomOut" to="Camera" method="_on_zoom_out_pressed"]
[connection signal="pressed" from="UILayer/MarginContainer/HBoxContainer/ResetZoom" to="Camera" method="_on_reset_zoom_pressed"]
[connection signal="pressed" from="UILayer/MarginContainer/HBoxContainer/ZoomIn" to="Camera" method="_on_zoom_in_pressed"]
